stop work on security manager stuff